# promptsLibrary

./: .gitignore  .lycheeignore  .markdownlint.json  .typos.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CURSOR_INTEGRATION_REPORT.md  CURSOR_V2_REPORT.md  LICENSE  README.md
.claude/: .claudeignore  CLAUDE.md  remote-settings.json  settings.json  statusline.sh
.claude/skills/nemotron-approve/: INSTALL.md  README.md  env.sh.example  pyproject.toml
.claude/skills/nemotron-approve/nemotron_approve/: __init__.py  __main__.py  cache.py  classifier.py  cli.py  config.py  llm_client.py  patterns.py  sanitize.py  trace.py  verdict.py
.claude/skills/nemotron-approve/tests/: test_cache.py  test_classifier.py  test_cli.py  test_config.py  test_hook_shim.sh  test_llm_client.py  test_patterns_adversarial.py  test_patterns_allow.py  test_patterns_deny.py  test_sanitize.py  test_trace.py  test_verdict.py
.cursor/: hooks.json
claude/: CLAUDE.md  MIGRATION-GUIDE.md  README.md  settings.json
configs/: .golangci.yml
cursor/: hooks.json
docs/: README.md  agents-reference.md  architecture.md  claude-code.md  commands-reference.md  cursor-setup.md  cursor.md  deployment.md  getting-started.md  prompt-catalog.md  skills-and-commands.md  testing-agent-models.md  troubleshooting.md  workflow-guide.md
prompts/: EVOLUTION_LOG.md  PROMPT_RESEARCH_360.md  audit-go.md  audit-to-prompt.md  git-polish.md  issue-to-prompt.md  master-agent.md  meta-enhance.md  pr_review.md  preflight.md  research-issue.md  task-prompt.md  workflow.md
scripts/: capture.sh  deploy-claude.sh  deploy.sh  (+6 more)
(+463 files in other folders)
